--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: auto;
   color: white;
   font-family: "TikTok Sans Display", sans-serif;
 }
